# cutie-terminal

./: CMakeLists.txt  README.md  cutie-terminal.desktop  cutie-terminal.pro
debian/: control  cutie-terminal.install
src/: main.cpp  util.cpp  util.h
src/qml/: main.qml
